syntax = "proto3";
package tendermint.types;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/types";

import "tendermint/types/validator.proto";

message VoterSet {
  repeated tendermint.types.Validator voters = 1;
  int64    total_voting_power                = 2;
}

message VoterParams {
  int32 voter_election_threshold           = 1;
  int32 max_tolerable_byzantine_percentage = 2;
}
